<resources>
    <string name="app_name">Ambika Cold Storage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prefrence_file_name">user_detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_network_msg">Ops… Its seems you can\'t connect to our network, Please check your internet connection</string>
    <string name="inword_list_title">Your Inwards</string>
    <string name="outword_list_title">Your Outwards</string>
    <string name="customer_list_title">Customer List</string>
    <string name="invoice_list_title">Invoices</string>
    <string name="press_again_exit_app">Press again to exit from the app</string>
    <string name="rs">\u20B9</string>
    <string name="item">Item</string>
    <string name="done">DONE</string>
    <string name="enter_inward_number">Enter Inward Number</string>
    <string name="inward_number">Inward Number</string>
    <string name="Enter_Outward_Number">Enter Outward Number</string>
    <string name="invoice_no">Invoice No</string>
    <string name="to_date">To Date</string>
    <string name="from_date">From Date</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="reset_filters">Reset Filters</string>
    <string name="paid_on">Paid On</string>
    <string name="invoice_generated_period">Invoice Generated Period</string>
    <string name="invoice_generation_due">Invoice Generation Due</string>
    <string name="sort_by_expression">Sort By Expression</string>
    <string name="hint_alert">Tuver Aakha - SKL GOLD - 30KG Bags available stock is 300 Please enter proper outward quanity. </string>
    <string name="short_by">Short By</string>
    <string name="broker">Broker</string>
    <string name="month">Month</string>
    <string name="ok">OK</string>
    <string name="popup_hint">Are you sure you want to logout?</string>
    <string name="confirmation">Confirmation</string>
    <string name="invoice_status">Invoice Status</string>
    <string name="year">Year</string>
    <string name="alert">Alert</string>
    <string name="okay">Okay</string>
    <string name="add_outward">Add Outward</string>
    <string name="add_inward">Add Inward</string>
    <string name="add_customer">Add Customer</string>
    <string name="outwarded_on">Outwarded On</string>
    <string name="receipt_type">Receipt Type</string>
    <string name="paid_status">Paid Status</string>
    <string name="inward_on">Inward On</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_marko">Enter Marko</string>
    <string name="enter_unit">Enter Unit</string>
    <string name="enter_inward_no">Enter Inward No</string>
    <string name="select_broker_name">Select Broker Name</string>
    <string name="refine_result">Refine Result</string>
    <string name="no_connection">No Connection</string>
    <string name="select_item">Select Item</string>
    <string name="unit">Unit</string>
    <string name="search_by_party_name">Search By Party Name</string>
    <string name="Partywise_Invoice">Partywise Invoice</string>
    <string name="referesh">REFRESH</string>
    <string name="Login">Login</string>
    <string name="select_unit">Select Unit</string>
    <string name="rent_month">Rent/Month</string>
    <string name="inward_quantity">Inward Quantity</string>
    <string name="marko">Marko</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="unloading_charges">Unloading Charges</string>
    <string name="location"> Location</string>
    <string name="password"> Password</string>
    <string name="submit"> Submit</string>
    <string name="select_location"> Select Location</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="print">Print</string>
    <string name="close">Close</string>
    <string name="test">test</string>
    <string name="email">Email</string>
    <string name="remark">Remark</string>
    <string name="enter_party_name">Enter Party Name</string>
    <string name="Outward_No">Outward No.</string>
    <string name="driver_contact_no">Driver Contact No.</string>
    <string name="driver_name">Driver Name</string>
    <string name="tranporter">Tranporter</string>
    <string name="Vehicle_No">Vehicle No.</string>
    <string name="add_item">Add Item </string>
    <string name="select_party_name">Select Party Name</string>
    <string name="inward_no">Inward No.</string>
    <string name="party_name">Party Name</string>
    <string name="no_reocrd_found">No Reocrd Found</string>
    <string name="search_by_item_name">Search By Item Name</string>

    <!--Row file-->
    <string name="update1">Update</string>
    <string name="row_name">Shweta Panchal</string>
    <string name="row_email">milap@gmail.com </string>
    <string name="row_invoice_no">INV18558 </string>
    <string name="row_phone_no">9855555555,9855555555 </string>
    <string name="row_role">Role : Customer</string>
    <string name="row_edit_location">A304</string>
    <string name="row_date">20-02-2019</string>
    <string name="row_pay_now">Pay Now</string>
    <string name="row_pa">PA:403.56</string>
    <string name="row_ta">TA:403.56</string>
    <string name="row_location">A304,A304,A304</string>
    <string name="row_location_name">Location :</string>
    <string name="row_unloading_charge">1500</string>
    <string name="row_unloading">Unloading Charges :</string>
    <string name="row_item_name">Choli-25kg Bag</string>
    <string name="row_paid">Paid : </string>
    <string name="row_paid_amont">100/800</string>
    <string name="row_inward_no">123456</string>
    <string name="row_item_price">342</string>
    <string name="row_detail_value">100/200</string>
    <string name="row_invoice_due_today">Invoice due today</string>
    <string name="row_name_item">Dhani Akhi[Locale Bardhan]</string>
    <string name="row_from_to_date">20-02-2019 to 24-02-2019</string>
    <string name="row_loading_charge">Loading Charge </string>
    <string name="toolbar_text">817624-27/09/2017</string>


    <string name="row_se_item_name">Marcha Aakha</string>
    <string name="row_se_item_unit">Reshma Pato-MOTA BORA-30KG BAG</string>
    <string name="row_se_in_no">18558</string>
    <string name="row_se_in_lo">Location: A104,A135,A124</string>
    <string name="row_se_in_stock">Stock: 100/200</string>
    <string name="row_se_in_lc">L.C</string>
    <string name="row_se_in_qty">Qty</string>
    <string name="row_se_in_oc">O.C</string>
    <string name="row_se_item_n">Apple - Nana box - AJ45 - 30kg</string>
    <string name="row_un_char">Unloading Charge: 1500</string>
    <string name="row_un_item">MarchPowder[ IPL 35]</string>
    <string name="row_search">gfdggfg</string>


    <string name="remaining_amount">Remaining Amount: </string>
    <string name="fully_paid">Fully Paid</string>
    <string name="partially_paid">Partially Paid</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="paid_amt">Paid Amt: </string>
    <string name="total_amt">Total Amt: </string>
    <string name="payment_history">Payment History</string>
    <string name="no_record">No Record Found...!!</string>
    <string name="total_amount">Total Amount: 2500</string>




</resources>
