<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:layout_marginBottom="2dp"
    android:padding="10dp"
    android:id="@+id/rl_detail">
<LinearLayout
    android:id="@+id/ll_one"

    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">
    <tech.fraction.webapp.ui.MyBoldTextView
        android:id="@+id/txt_name"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/row_name_item"/>
    <tech.fraction.webapp.ui.MyTextView
        android:id="@+id/detail_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/row_detail_value"/>
</LinearLayout>
    <LinearLayout
        android:id="@+id/ll_two"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"

        android:layout_below="@id/ll_one">
        <tech.fraction.webapp.ui.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_location_name"/>
        <tech.fraction.webapp.ui.MyBoldTextView
            android:id="@+id/txt_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_location"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_three"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"

        android:layout_below="@+id/ll_two">
        <tech.fraction.webapp.ui.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_unloading"/>
        <tech.fraction.webapp.ui.MyBoldTextView
            android:id="@+id/txt_unloading_charges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_unloading_charge"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="#33C7C1C1"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/ll_three">
        <ImageView
            android:id="@+id/edit"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/edit"
            android:padding="9dp"
         />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#D6D5D5"/>
        <ImageView
            android:id="@+id/delete"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/delete"
            android:padding="9dp"
          />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#D6D5D5"/>
    </LinearLayout>
</RelativeLayout>