<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f9f9f9"
        tools:context=".activity.InwardDetailActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rec_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false">

            </android.support.v7.widget.RecyclerView>

            <tech.fraction.webapp.ui.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="2dp"
                android:text="@string/Vehicle_No"
                android:textColor="@android:color/black" />

            <tech.fraction.webapp.ui.MyEditText
                android:id="@+id/etVehicleNo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_edittext"
                android:paddingLeft="10dp"
                android:text="454556" />

            <tech.fraction.webapp.ui.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="2dp"
                android:text="@string/tranporter"
                android:textColor="@android:color/black" />

            <tech.fraction.webapp.ui.MyEditText
                android:id="@+id/etTransporter"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_edittext"
                android:paddingLeft="10dp"
                android:text="Milap Panchal" />

            <tech.fraction.webapp.ui.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="2dp"
                android:text="@string/driver_name"
                android:textColor="@android:color/black" />

            <tech.fraction.webapp.ui.MyEditText
                android:id="@+id/etDriverName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_edittext"
                android:paddingLeft="10dp"
                android:text="Milap" />

            <tech.fraction.webapp.ui.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="2dp"
                android:text="@string/driver_contact_no"
                android:textColor="@android:color/black" />

            <tech.fraction.webapp.ui.MyEditText
                android:id="@+id/etDriverNo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_edittext"
                android:paddingLeft="10dp"
                android:text="942124" />

            <tech.fraction.webapp.ui.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="2dp"
                android:text="@string/remark"
                android:textColor="@android:color/black" />

            <tech.fraction.webapp.ui.MyEditText
                android:id="@+id/etRemark"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_edittext"
                android:gravity="top"
                android:lines="3"
                android:padding="10dp"
                android:text="@string/test" />

            <tech.fraction.webapp.ui.MyTextView
                android:id="@+id/txt_save"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/mybutton_one"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@android:color/white" />

            <tech.fraction.webapp.ui.MyTextView
                android:id="@+id/txt_print"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/mybutton"
                android:gravity="center"
                android:text="@string/print"
                android:textColor="@android:color/white" />

            <tech.fraction.webapp.ui.MyTextView
                android:id="@+id/txt_close"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/border_edittext"
                android:gravity="center"
                android:text="@string/close"
                android:textColor="@color/light_black" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>