<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_customer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/white"
    android:elevation="2dp"
    app:cardCornerRadius="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_customer"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/dummy_user">

        </de.hdodenhof.circleimageview.CircleImageView>

        <tech.fraction.webapp.ui.MyTextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/img_customer"
            android:text="@string/row_name"
            android:textColor="@color/light_black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <tech.fraction.webapp.ui.MyTextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_name"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@+id/img_customer"
            android:text="@string/row_email"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <tech.fraction.webapp.ui.MyTextView
            android:id="@+id/txt_phone_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_email"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@+id/img_customer"
            android:text="@string/row_phone_no"
            android:textColor="@color/light_black"
            android:textSize="16sp" />

        <tech.fraction.webapp.ui.MyTextView
            android:id="@+id/txt_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_phone_no"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@+id/img_customer"
            android:text="@string/row_role"
            android:textColor="@color/light_black"
            android:textSize="16sp" />
    </RelativeLayout>

</android.support.v7.widget.CardView>